--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.cdnfonts.com/css/gilroy-bold");
-
 * {
   padding: 0;
   margin: 0;
@@ -12,10 +10,13 @@ html {
 
 body {
   font-family: "Rubik", sans-serif;
+
   /* line-height: 1; */
   /* font-weight: 400; */
 }
+
 .container {
+  max-width: 140rem;
   padding: 2rem 12rem 2rem;
 }
 
@@ -36,9 +37,34 @@ a:link {
 
 .hero-section {
   background: #fff;
+  max-width: 140rem;
+  margin: 0 auto;
 }
 
+.sticky {
+  position: fixed;
+  box-shadow: 0 5px 15px rgba(220, 228, 235, 0.2);
+  z-index: 999999;
+  background-color: white;
+  top: 0;
+  right: 0;
+  width: 100%;
+}
+.navigation {
+  max-width: 100%;
+  margin: 0 auto;
+}
+.header-container {
+  width: 100%;
+  max-width: 140rem;
+  margin: 0 auto;
+  padding: 12px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 header {
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
@@ -86,8 +112,10 @@ header {
   color: #141414;
   transition: all 0.3s;
 }
+.heading center(
+  width: 100%;
 
-.nav-link:hover:hover,
+) .nav-link:hover:hover,
 .nav-link:hover:active {
   color: #0065fe;
 }
@@ -122,6 +150,106 @@ header {
   background-color: #ffffff;
   box-shadow: inset 0 0 0 1px #0065fe;
 }
+
+.heading-center,
+.nav-header,
+.section-center {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+header {
+  padding-top: 3.5rem;
+}
+
+.heading-primary {
+  text-transform: capitalize;
+  max-width: 1000px;
+  margin: 0 auto;
+  font-size: 2.5rem;
+}
+.headeing-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.8rem;
+  text-align: center;
+}
+
+.hero-description {
+  max-width: 710px;
+  margin: 0 auto;
+  font-size: 1.125rem;
+}
+
+.hero-links {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.header-btn {
+  width: 9rem;
+  cursor: pointer;
+}
+
+.bg-none {
+  background: none;
+  border: none;
+}
+
+.chain-img {
+  width: 100%;
+  max-width: 384px;
+}
+
+.chain-container {
+  position: relative;
+  background: white;
+  z-index: 100;
+  width: 100%;
+  max-width: 600px;
+  margin-block: 3rem;
+  margin-block-end: 4rem;
+}
+
+.chain {
+  padding: 2.5rem 3.75rem;
+  background: rgba(254, 254, 254, 0.1);
+  border: 0.5px solid #005ae2;
+  border-radius: 24px;
+  backdrop-filter: blur(106px);
+  display: flex;
+  flex-direction: column;
+
+  background: linear-gradient(
+    to right,
+    rgba(226, 233, 240, 0.7) rgba(220, 228, 235, 0.7),
+    rgba(255, 255, 255, 1)
+  );
+  z-index: 1000;
+}
+
+.chain-bg {
+  position: absolute;
+  top: -1.5rem;
+  left: 0.2rem;
+  height: 100%;
+  z-index: -100;
+}
+
+.chain-text {
+  text-align: center;
+  max-width: 25rem;
+  margin: 0 auto;
+}
+
+.circle-layer-img {
+  width: 100%;
+  display: block;
+}
+
 /* ////////////////////////////////// */
 /* ////////////////////////////////// */
 /* HERO SECTION */
@@ -130,16 +258,17 @@ header {
 
 .hero-section {
   position: relative;
+  max-width: 140rem;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .heading-primary {
-  text-align: center;
-  font-size: 4.8rem;
-  line-height: 9.6rem;
-  color: #141414;
-  margin: 9.6rem 18rem 0 18rem;
-  position: relative;
-  background: #ffffff;
+  text-transform: capitalize;
+  max-width: 1000px;
+  margin: 0 auto;
+  font-size: 2.5rem;
 }
 
 .blue-line {
@@ -148,6 +277,9 @@ header {
   transform: translate(60%, -100%);
 }
 .hero-description {
+  max-width: 100%;
+  margin: 0 auto;
+  font-size: 1.125rem;
   font-size: 1.8rem;
   line-height: 2.8rem;
   text-align: center;
@@ -213,13 +345,14 @@ article {
 }
 
 .views-center {
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
 .article-info {
   display: flex;
   justify-content: space-between;
-  gap: 9rem;
+  gap: 10rem;
 }
 .article-heading {
   font-size: 4rem;
@@ -238,7 +371,6 @@ article {
   color: #141414;
 }
 .article-text {
-  font-family: "Gilroy-Medium";
   font-size: 1.6rem;
   line-height: 2.4rem;
   color: #141414;
@@ -247,6 +379,9 @@ article {
 /* feature-section */
 
 .feature-section {
+}
+
+.feature-container {
   padding-top: 12rem;
   display: grid;
   grid-template-columns: 2fr 3fr;
@@ -284,7 +419,7 @@ article {
 
 .feature-heading-text {
   font-size: 1.6rem;
-  line-height: 2.8rem;
+  line-height: 2rem;
   color: #141414;
 }
 
@@ -328,6 +463,7 @@ article {
 
 .price-section-head {
   margin-bottom: 9rem;
+  width: 110rem;
 }
 
 .price-title-container {
@@ -355,14 +491,18 @@ article {
 }
 
 .pricing-card {
+  width: 110rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
   align-items: center;
   justify-content: center;
 }
 
 .pricing--card--1 {
-  padding: 0 3.2rem 3.2rem 0;
+  /* padding: 0 3.2rem 3.2rem 0; */
+  width: 100%;
+  height: 50rem;
   background: #ffffff;
   border: 0.4px solid #005ae2;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
@@ -370,15 +510,17 @@ article {
 }
 
 .pricing--card--2 {
-  padding: 6rem 0 8rem 0;
+  width: 100%;
+  height: 60rem;
   background: linear-gradient(180deg, #1e3448 99.99%, rgba(30, 52, 72, 0) 100%);
   filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.05));
   border-radius: 1.2rem;
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
 
 .pricing--card--3 {
-  padding: 0 0 3.2rem 0;
+  height: 50rem;
+
   background: #ffffff;
   border: 0.4px solid #005ae2;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
@@ -386,9 +528,6 @@ article {
   transition: 0.6s;
 }
 
-.plan-details .pro {
-  text-align: center;
-}
 .list {
   list-style: none;
   display: flex;
@@ -438,6 +577,11 @@ article {
   margin-left: 8rem;
   margin-top: 4rem;
 }
+.plan-details-pro {
+  margin-left: 4rem;
+
+  margin-top: 8rem;
+}
 
 .plan-price.pro {
   font-size: 4rem;
@@ -459,6 +603,7 @@ article {
   color: #ffffff;
 }
 .pricing-btn {
+  width: 110rem;
   margin-top: 9.6rem;
   display: flex;
   align-items: center;
@@ -522,6 +667,7 @@ article {
   background-color: #1e3448;
   background-repeat: no-repeat, no-repeat;
   background-size: 70%;
+  min-width: 100%;
 }
 
 .cta-container {
